<?xml version="1.0" encoding="utf-8"?>
<!-- 
	*TODO test meid: 268435458915701359 / A000001DEF956F = ?????? 
	test esn: 02003541147 = 109216
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:background="#fff"
              android:padding="10px" >
    <TextView android:id="@+id/meid_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:editable="false"
              android:textColor="#000000"
              android:textSize="10pt"
              android:gravity="center"
              android:text="@string/inputLabel" />
    <EditText android:id="@+id/meid"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/initialInputText"
              android:gravity="center"
              android:width="300px" />
    <Button android:id="@+id/calculate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcButton" />
    <TextView android:id="@+id/details"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:editable="false"
              android:height="150px"
              android:textColor="#ffffff"
              android:background="@layout/resultbox"
              android:text=""
              android:padding="10px" />
    <Button android:id="@+id/history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historyButton" />
    <TextView android:id="@+id/copyright"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:editable="false"
              android:textColor="#000000"
              android:text="@string/copyright" />
</LinearLayout>