<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Gassan Idriss
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="#fff"
    android:color="#000"
    android:padding="10px"
    android:stretchColumns="1">
	<Button android:id="@+id/calculate"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/calcViewButton" />
	<Button android:id="@+id/clearDB"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/clearHistoryButton" /> 
    <TextView android:id="@+id/title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:editable="false"
              android:textColor="#000000"
              android:textSize="10pt"
              android:gravity="center"
              android:text="@string/historyTitle" />
</TableLayout>